--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">StepN</string>
+    <string name="tab_1">Overview</string>
+    <string name="tab_2">Home</string>
+    <string name="tab_3">Settings</string>
+
 </resources>
