--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="average_this_week">Average Steps Taken In the Last 7 Days</string>
     <string name="total_this_month">Total Steps Taken This Month</string>
     <string name="average_this_month">Average Steps Taken This Month</string>
-    <string name="ok">Ok</string>
-    <string name="settings">Settings</string>
+    <string name="ok">OK</string>
+    <string name="settings">SETTINGS</string>
     <string name="language">Change Language</string>
     <string name="notification">Notifications</string>
     <string name="step_size">Change Step Size</string>
